--- a/styles.css
+++ b/styles.css
@@ -1,96 +1,82 @@
+@import url("http://fonts.cdnfonts.com/css/pokemon-solid");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400&display=swap");
 body {
-  background-color: orangered;
-  margin: 0;
-  font-family: rubik;
-  color: white;
+  background-image: url(./Images/batthern-1920x1080.png);
 }
 
-.container {
-  padding: 40px;
-  margin: 0 auto;
+body header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-h1 {
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 54px;
+body header .poke-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 500px;
+  padding-bottom: 50px;
 }
 
-.card {
-  list-style: none;
-  padding: 40px;
-  background-color: #f4f4f4;
-  color: #222;
-  text-align: center;
+body .poke-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
-.card-title {
-  text-transform: uppercase;
-  font-size: 32px;
-  font-weight: normal;
-  margin-bottom: 0;
-}
-
-.card-subtitle {
-  font-weight: lighter;
-  color: #666;
-  margin-top: 5px;
-}
-
-.card-image {
-  height: 180px;
-}
-
-#pokedex {
-  -webkit-padding-start: 0;
-          padding-inline-start: 0;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(320px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-gap: 20px;
-}
-
-.card:hover {
-  -webkit-animation: bounce 0.5s linear;
-          animation: bounce 0.5s linear;
-}
-
-@-webkit-keyframes bounce {
-  20% {
-    -webkit-transform: translateY(-6px);
-            transform: translateY(-6px);
-  }
-  40% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
-  60% {
-    -webkit-transform: translateY(-2px);
-            transform: translateY(-2px);
-  }
-  80% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
-}
-
-@keyframes bounce {
-  20% {
-    -webkit-transform: translateY(-6px);
-            transform: translateY(-6px);
-  }
-  40% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
-  60% {
-    -webkit-transform: translateY(-2px);
-            transform: translateY(-2px);
-  }
-  80% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
+body .poke-container .poke-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  font-family: "Lato", sans-serif;
+  background: #efefbb;
+  background: -webkit-gradient(linear, left top, right top, from(#FDDFDF), color-stop(#DEFDE0), color-stop(#FCF7DE), to(#DEF3FD));
+  background: linear-gradient(to right, #FDDFDF, #DEFDE0, #FCF7DE, #DEF3FD);
+  padding: 5px 20px 5px 20px;
+  margin: 10px 10px 10px 10px;
+  border: 2px solid;
+  border-radius: 10%;
 }
 /*# sourceMappingURL=styles.css.map */
