--- a/styles.scss
+++ b/styles.scss
@@ -37,6 +37,7 @@ body {
             border-bottom: 3px solid rgb(255, 254, 254);
             padding-bottom: 5px;
             margin-bottom: 10px;
+            color: white;
         }
             ::placeholder {
                 color: white;
@@ -52,9 +53,11 @@ body {
         flex-direction: row;
         align-items: center;
         justify-content: space-evenly;
-        color: white;
+        color: black;
+        
         font-family: $principal-font;
-        font-weight: lighter;
+        font-size: 1.3rem;
+        font-weight: bold;
         cursor: pointer;
          span {
             border: 1px solid white;
@@ -62,6 +65,7 @@ body {
             border-radius: 20%;
             margin-top: 40px;
             margin-bottom: 40px;
+            background-color: #FFD700;
          }
 
     }
@@ -79,12 +83,30 @@ body {
         align-items: center;
         justify-content: space-evenly;
         font-family: $principal-font;
-        background: #efefbb;
-        background: linear-gradient(to right, #FDDFDF, #DEFDE0, #FCF7DE, #DEF3FD);
         padding: 3px 30px 3px 30px;
         margin: 10px 10px 10px 10px;
         border: 5px solid rgb(185, 175, 175);
         border-radius: 10%;
+
+        &:hover {
+           
+            animation: shake 1s;
+            animation-iteration-count: infinite;
+        }
+
+        @keyframes shake {
+            0% { transform: translate(1px, 1px) rotate(0deg) scale(0.8); }
+            10% { transform: translate(-1px, -2px) rotate(-5deg) scale(0.9); }
+            20% { transform: translate(-3px, 0px) rotate(5deg) scale(1); }
+            30% { transform: translate(3px, 2px) rotate(0deg) scale(1.1); }
+            40% { transform: translate(1px, -1px) rotate(5deg) scale(1.2); }
+            50% { transform: translate(-1px, 2px) rotate(-5deg) scale(1.1); }
+            60% { transform: translate(-3px, 1px) rotate(0deg) scale(1); }
+            70% { transform: translate(3px, 1px) rotate(-5deg) scale(0.9); }
+            80% { transform: translate(-1px, -1px) rotate(5deg) scale(0.8); }
+            90% { transform: translate(1px, 2px) rotate(0deg) scale(0.9); }
+            100% { transform: translate(1px, -2px) rotate(-5deg) scale(1); }
+          }
 
        
           
